HVAC Backup 2/objects/CP_Pincode_Coverage__c(1).object
<CustomObject>
    <fields>
        <fullName>CP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CP Pincodes Coverage</relationshipLabel>
        <relationshipName>CP_Pincodes_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>CP Pincodes Coverage</relationshipLabel>
        <relationshipName>CP_Pincodes_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PinCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PinCode</label>
        <referenceTo>PinCode__c</referenceTo>
        <relationshipLabel>CP Pincodes Coverage</relationshipLabel>
        <relationshipName>CP_Pincodes_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>PinCode__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <externalId>true</externalId>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CP Pincode Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CP__c</columns>
        <columns>PinCode__c</columns>
        <columns>Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CP Pincode Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Pincodes Coverage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>